public/assets/custom.css
.underline {
	text-decoration: underline;
}

li {
	list-style: none;
	padding-bottom: 1rem;
}

li li {
	padding-bottom: 0;
}

ul.secondary {
	margin-top: 2rem;
	padding-left: 5rem;
}

summary {
	font-weight: 600;
	margin-left: -18px;
}

.name {
	font-weight: 700;
}

.bold {
	font-weight: 600;
}

ul.subsection {
	background-color: #eee;
	padding: 1rem 1rem 1rem 2rem;
	margin-left: 0.5rem;
}

ul.subsection > li {
	margin-top: 1rem;
}

.title-language {
	display: flex;
	justify-content: space-between;
	flex-direction: row-reverse;
	align-content: center;
	align-items: top;
	line-height: 2rem;
}

